--- a/Ticket Tracker/Ticket Tracker/Views/Shared/_Layout.cshtml
+++ b/Ticket Tracker/Ticket Tracker/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - Ticket Tracker</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @RenderSection("stylesheets", required: false)
 </head>
 <body>
     <div class="container">
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Ticket Tracker", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Ticket Tracker", "Index", "DailyTicketCounts", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 @if (Request.IsAuthenticated)
@@ -41,7 +41,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/bootstrap")
 </body>
 </html>
