--- a/Ticket Tracker/Ticket Tracker/Views/Tickets/Create.cshtml
+++ b/Ticket Tracker/Ticket Tracker/Views/Tickets/Create.cshtml
@@ -70,7 +70,7 @@
         <div class="form-group col-md-6 col-sm-6">
             @Html.LabelFor(model => model.Customer, htmlAttributes: new { @class = "control-label col-md-4 col-sm-4" })
             <div class="col-md-8 col-sm-8">
-                @Html.DropDownListFor(model => model.Customer, ViewBag.cList as SelectList, "--Select Customer--", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.Customer, null, "--Select Customer--", htmlAttributes: new { @class = "form-control" })
             </div>
         </div>
 
