Added Chart functionality and bug fixing with regards to updating the numbers being tracked.

--- a/Ticket Tracker/Ticket Tracker/Content/Site.css
+++ b/Ticket Tracker/Ticket Tracker/Content/Site.css
@@ -31,3 +31,11 @@ li.custom-welcome{
     color: gray;
     padding-top:15px;
 }
+
+.add-margin-7 {
+    margin-top: 7px;
+}
+
+.add-margin-100{
+    margin-top: 100px;
+}
